# Mandelbrot

./: .gitignore  CMakeLists.txt  GUI_NOTES.md  install_run.bat  install_run.ps1  install_run.sh  run.bat  run.ps1  run.sh  run_osx.sh  soft_refactor.md  test_perturbation.cpp  todo.md  uninstall.bat  uninstall.ps1  uninstall.sh
bench/: bench_frame.cpp
benchmark_py/: benchmark.py
docs/: dev-log.md  user-diagnostics.md
include/: macro_util.hpp
include/concurrency/: WorkerPool.hpp
include/core/: Kernel.hpp  Numeric.hpp  Pixel.hpp
include/data_structure/: PerturbationJobExample.hpp
include/engine/: Camera.hpp  DoubleCanvas.hpp  EscapeTimeEngine.hpp  MandelbrotEngine.hpp  PerturbationEngine.hpp
include/engine/dto/: FrameRequest.hpp  FrameView.hpp
include/engine/job/: Counters.hpp  EscapeTimeJob.hpp  PerturbationJob.hpp  RenderJob.hpp  RenderJobStack.hpp
include/engine/util/: ColorUtil.hpp  FrameBuffer.hpp  LazyVector.hpp  RebaseMatrix.hpp  TaggedReferenceCounter.hpp
include/gui/: Exporter.hpp  MandelbrotGUI.hpp  Palettes.hpp  Presenter.hpp  RenderSettings.hpp
include/gui/util/: LegendPanel.hpp  SettingsSidebar.hpp  UITheme.hpp  Widgets.hpp
src/: benchmark.cpp  main.cpp
src/engine/: Camera.cpp  DoubleCanvas.cpp  EscapeTimeEngine.cpp  MandelbrotEngine.cpp  PerturbationEngine.cpp
